--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,3 @@
-<p>
-  dashboard works!
-</p>
+<div class="component-container full-container">
+  <button id="add-button" mat-fab color="primary">+</button>
+</div>
