--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="component-container full-container">
-  <button id="add-button" mat-fab color="primary">
+  <button (click)="openAddNeopixelDialog()" id="add-button" mat-fab color="primary">
     <mat-icon>add</mat-icon>
   </button>
 </div>
