remove redundant url

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<div id="app-container" style="background-image: url('static/adafruit.png')">
+<div id="app-container">
   <router-outlet></router-outlet>
 </div>
