--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,18 @@
 <div class="component-container full-container">
   <div class="items-container" id="neopixels-container">
-    <mat-card class="card-container" *ngFor="let neopixel of neopixels">
+    <mat-card class="card-container" id="neopixel-card" *ngFor="let neopixel of neopixels">
       <mat-card-header>
         {{neopixel.id}}
       </mat-card-header>
+      <mat-card-content>
+        <div class="items-container items-container-row">
+          <div id="pixel-container" *ngFor="let pixel of neopixel.pixels">
+            <button id="pixel" mat-fab>
+              <mat-icon>color_lens</mat-icon>
+            </button>
+          </div>
+        </div>
+      </mat-card-content>
     </mat-card>
   </div>
   <button (click)="openAddNeopixelDialog()" id="add-button" mat-fab color="primary">
