--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
       <mat-card-content>
         <div class="items-container items-container-row">
           <div id="pixel-container" *ngFor="let pixel of neopixel.pixels">
-            <button id="pixel" mat-fab>
+            <button (click)="openPixelColorDialog()" id="pixel" mat-fab>
               <mat-icon>color_lens</mat-icon>
             </button>
           </div>
