--- a/src/app/dashboard/pixel-color-dialog/pixel-color-dialog.component.html
+++ b/src/app/dashboard/pixel-color-dialog/pixel-color-dialog.component.html
@@ -1,3 +1,3 @@
-<p>
-  pixel-color-dialog works!
-</p>
+<div class="dialog-container" id="color-picker-container">
+  <app-color-picker></app-color-picker>
+</div>
