using ngx color picker

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -10,6 +10,7 @@
             <button (click)="openPixelColorDialog()" id="pixel" mat-fab>
               <mat-icon>color_lens</mat-icon>
             </button>
+            <!-- <input [(colorPicker)]="color" [style.background]="color"/> -->
           </div>
         </div>
       </mat-card-content>
