color picker button style

--- a/src/app/dashboard/pixel-color-dialog/pixel-color-dialog.component.html
+++ b/src/app/dashboard/pixel-color-dialog/pixel-color-dialog.component.html
@@ -3,7 +3,9 @@
       [cpToggle]="true"
       [cpDialogDisplay]="'inline'"
       [cpOKButton]="true"
+      [cpOKButtonClass]="'mat-raised-button'"
       [cpCancelButton]="true"
+      [cpCancelButtonClass]="'mat-raised-button'"
       [cpAlphaChannel]="'disabled'"
       [cpOutputFormat]="'rgba'"
       [(colorPicker)]="color"
