--- a/src/app/dashboard/add-neopixel-dialog/add-neopixel-dialog.component.html
+++ b/src/app/dashboard/add-neopixel-dialog/add-neopixel-dialog.component.html
@@ -14,6 +14,7 @@
           <input type="text" placeholder="Number of pixels" matInput formControlName="numPixels" required>
           <mat-error *ngIf="addNeopixelForm.controls['numPixels'].hasError('required')">This field is required.</mat-error>
           <mat-error *ngIf="addNeopixelForm.controls['numPixels'].hasError('min')">Must have at least 1 pixel.</mat-error>
+          <mat-error *ngIf="addNeopixelForm.controls['numPixels'].hasError('pattern')">This field must be a number.</mat-error>
         </mat-form-field>
       </div>
       <mat-form-field>
