--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,9 +1,6 @@
 #add-button {
-    position: absolute;
     width: 72px;
     height: 72px;
-    right: 24px;
-    bottom: 24px;
 }
 
 #neopixels-container {
@@ -22,4 +19,14 @@
     position: absolute;
     right:0;
     top:0;
+}
+
+.dashboard-actions-container {
+    position: absolute;
+    right: 24px;
+    bottom: 24px;
+}
+
+.dashboard-action {
+    margin: 8px;
 }
