--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -20,7 +20,14 @@
       </mat-card-content>
     </mat-card>
   </div>
-  <button (click)="openAddNeopixelDialog()" id="add-button" mat-fab color="primary">
-    <mat-icon>add</mat-icon>
-  </button>
+  <div class="dashboard-actions-container">
+    <a routerLink="/animations">
+      <button class="dashboard-action" id="animation-nav-button" mat-fab color="primary">
+          <mat-icon>movie_filter</mat-icon>
+      </button>
+    </a>
+    <button class="dashboard-action" (click)="openAddNeopixelDialog()" id="add-button" mat-fab color="primary">
+      <mat-icon>add</mat-icon>
+    </button>
+  </div>
 </div>
