animation gui controls

--- a/src/app/neopixel/neopixel.component.html
+++ b/src/app/neopixel/neopixel.component.html
@@ -1,28 +1,38 @@
 <div class="component-container full-container">
-    <div class="items-container" id="neopixels-container">
-      <mat-card class="card-container" id="neopixel-card" *ngFor="let neopixel of neopixels; let id = index">
-        <mat-card-header id="neopixel-card-header">
-          <mat-card-title>{{neopixel.id}}</mat-card-title>
-          <div id="neopixel-actions">
-            <button id="clear-button" (click)="clearNeopixel(neopixel.id)" mat-raised-button color="primary">
-              Clear
+  <div class="items-container" id="neopixels-container">
+    <mat-card class="card-container" id="neopixel-card" *ngFor="let neopixel of neopixels; let id = index">
+      <mat-card-header id="neopixel-card-header">
+        <mat-card-title>{{neopixel.id}}</mat-card-title>
+        <div id="neopixel-actions">
+          <button id="clear-button" (click)="clearNeopixel(neopixel.id)" mat-raised-button color="primary">
+            Clear
+          </button>
+        </div>
+      </mat-card-header>
+      <mat-card-content>
+        <div class="items-container items-container-row">
+          <div id="pixel-container" *ngFor="let pixel of neopixel.pixels; let index = index">
+            <button [ngStyle]="{'background-color': decimalArrayToRGB(pixel.color)}" (click)="openPixelColorDialog(id, index)" id="pixel" mat-fab>
+              <mat-icon>color_lens</mat-icon>
             </button>
           </div>
-        </mat-card-header>
-        <mat-card-content>
-          <div class="items-container items-container-row">
-            <div id="pixel-container" *ngFor="let pixel of neopixel.pixels; let index = index">
-              <button [ngStyle]="{'background-color': decimalArrayToRGB(pixel.color)}" (click)="openPixelColorDialog(id, index)" id="pixel" mat-fab>
-                <mat-icon>color_lens</mat-icon>
-              </button>
-            </div>
-          </div>
-        </mat-card-content>
-      </mat-card>
-    </div>
-    <div class="neopixel-actions-container">
-      <button class="neopixel-action" (click)="openAddNeopixelDialog()" id="add-button" mat-fab color="primary">
-        <mat-icon>add</mat-icon>
-      </button>
-    </div>
+        </div>
+        <div class="items-container" id="animations-container">
+          <mat-card class="card-container" id="animation-container" *ngFor="let anim of neopixel.animations">
+            <mat-card-content>
+                <button id="play-pause-button" mat-fab color="primary">
+                  <mat-icon>play_arrow</mat-icon>
+                </button>
+                <span id="animation-title">{{anim}}</span>
+            </mat-card-content>
+          </mat-card>
+        </div>
+      </mat-card-content>
+    </mat-card>
   </div>
+  <div class="neopixel-actions-container">
+    <button class="neopixel-action" (click)="openAddNeopixelDialog()" id="add-button" mat-fab color="primary">
+      <mat-icon>add</mat-icon>
+    </button>
+  </div>
+</div>
