--- a/src/app/neopixel/add-neopixel-dialog/add-neopixel-dialog.component.html
+++ b/src/app/neopixel/add-neopixel-dialog/add-neopixel-dialog.component.html
@@ -22,6 +22,14 @@
           <mat-option *ngFor="let pin of gpioPinOptions" value="{{pin}}">{{pin}}</mat-option>
         </mat-select>
       </mat-form-field>
+      <div class="form-input-container">
+        <mat-form-field>
+          <input type="text" placeholder="Brightness" matInput formControlName="brightness">
+          <mat-error *ngIf="addNeopixelForm.controls['brightness'].hasError('min')">Must be greater than zero.</mat-error>
+          <mat-error *ngIf="addNeopixelForm.controls['brightness'].hasError('max')">Cannot be greater than 255.</mat-error>
+          <mat-error *ngIf="addNeopixelForm.controls['brightness'].hasError('pattern')">Must be a number.</mat-error>
+        </mat-form-field>
+      </div>
       <div class="action-container">
         <button type="submit" class="submit-button" mat-raised-button color="primary" [disabled]="addNeopixelForm.invalid">Go!</button>
       </div>
