menu background color and font size

--- a/src/app/neopixel/neopixel.component.html
+++ b/src/app/neopixel/neopixel.component.html
@@ -8,7 +8,7 @@
           </button>
           <mat-menu class="action-menu" #menu="matMenu" xPosition="before">
             <button id="clear-button" (click)="deleteNeopixel(neopixel)" mat-menu-item>
-              <span>Delete</span>
+              <span class="menu-action-text">Delete</span>
             </button>
           </mat-menu>
         </div>
