align action icon and text

--- a/src/app/neopixel/neopixel.component.css
+++ b/src/app/neopixel/neopixel.component.css
@@ -40,6 +40,11 @@
     background-color: #c2185b !important;
 }
 
+#delete-neopixel-action {
+    display: flex;
+    align-items: center;
+}
+
 #animation-title {
     margin: 16px;
 }
