overflow scroll and disable color input

--- a/src/app/neopixel/pixel-color-dialog/pixel-color-dialog.component.html
+++ b/src/app/neopixel/pixel-color-dialog/pixel-color-dialog.component.html
@@ -8,6 +8,7 @@
     [cpCancelButtonClass]="'mat-raised-button'"
     [cpAlphaChannel]="'disabled'"
     [cpOutputFormat]="'rgba'"
+    [cpDisableInput]="true"
     [(colorPicker)]="color"
     (colorPickerSelect)="updatePixel($event)">
   </span>
