--- a/src/app/neopixel/neopixel.component.html
+++ b/src/app/neopixel/neopixel.component.html
@@ -22,9 +22,16 @@
       <mat-card-content>
         <div class="items-container items-container-row">
           <div id="pixel-container" *ngFor="let pixel of neopixel.pixels; let index = index">
+            <span>{{index+1}}</span>
             <button [ngStyle]="{'background-color': decimalArrayToRGB(pixel.color)}" (click)="openPixelColorDialog(id, index)" id="pixel" mat-fab>
-              <mat-icon>color_lens</mat-icon>
+              <mat-icon id="pixel-icon">flare</mat-icon>
             </button>
+            <mat-checkbox 
+              (click)="$event.stopPropagation()"
+              (change)="$event ? selectedPixels.toggle(pixel) : null"
+              [checked]="selectedPixels.isSelected(pixel)"
+              id="pixel-select">
+            </mat-checkbox>
           </div>
         </div>
         <div class="items-container" id="animations-container">
