--- a/src/app/neopixel/neopixel.component.html
+++ b/src/app/neopixel/neopixel.component.html
@@ -7,6 +7,10 @@
             <mat-icon>more_vert</mat-icon>
           </button>
           <mat-menu class="action-menu" #menu="matMenu" xPosition="before">
+            <button id="select-neopixel-action" (click)="selectMode = !selectMode" mat-menu-item>
+              <mat-icon>check_box</mat-icon>
+              <span class="menu-action-text">Select</span>
+            </button>
             <button id="clear-neopixel-action" (click)="clearNeopixel(neopixel)" mat-menu-item>
               <mat-icon>clear_all</mat-icon>
               <span class="menu-action-text">Clear</span>
@@ -22,16 +26,17 @@
       <mat-card-content>
         <div class="items-container items-container-row">
           <div id="pixel-container" *ngFor="let pixel of neopixel.pixels; let index = index">
-            <span>{{index+1}}</span>
+            <span *ngIf="selectMode">{{index+1}}</span>
             <button [ngStyle]="{'background-color': decimalArrayToRGB(pixel.color)}" (click)="openPixelColorDialog(id, index)" id="pixel" mat-fab>
               <mat-icon id="pixel-icon">flare</mat-icon>
             </button>
-            <mat-checkbox 
-              (click)="$event.stopPropagation()"
-              (change)="$event ? selectedPixels.toggle(pixel) : null"
-              [checked]="selectedPixels.isSelected(pixel)"
-              id="pixel-select">
-            </mat-checkbox>
+            <div id="pixel-select" *ngIf="selectMode">
+              <mat-checkbox 
+                (click)="$event.stopPropagation()"
+                (change)="$event ? selectedPixels.toggle(pixel) : null"
+                [checked]="selectedPixels.isSelected(pixel)">
+              </mat-checkbox>
+            </div>
           </div>
         </div>
         <div class="items-container" id="animations-container">
